@@ -254,16 +254,12 @@ notify_opendialog_clicked (GtkWidget * igad)
 	GtkTreeView *view;
 	GtkTreeIter iter;
 	struct notify_per_server *servnot;
-	char cmd[NICKLEN + 16];
 
 	view = g_object_get_data (G_OBJECT (notify_window), "view");
 	if (gtkutil_treeview_get_selected (view, &iter, NPS_COLUMN, &servnot, -1))
 	{
 		if (servnot)
-		{
-			snprintf (cmd, sizeof (cmd), "query %s", servnot->notify->name);
-			handle_command (servnot->server->front_session, cmd, FALSE);
-		}
+			open_query (servnot->server, servnot->notify->name);
 	}
 }
 
